# Flashscore--study-app

./: .env.example  .gitignore  .npmrc  .replit  .vercelignore  1.env.txt  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_NOTES.md  README.md  STRIPE_INTEGRATION.md  VERCEL_DEPLOYMENT_GUIDE.md  capacitor.config.ts  error-monitor.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  render.yaml  replit.md  tsconfig.base.json  tsconfig.json  vercel.json  verify-vercel-setup.sh
.github/workflows/: ci.yml
android/: README.md  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
apps/backend/: .env  Dockerfile   package.json  tsconfig.json
apps/backend/ml/: Dockerfile  ai_enhancement.py  api.py  main.py  render.yaml
apps/frontend/: .env.development  .env.example  next.config.js  package.json  tsconfig.json  vercel.json
docs/: ARCHITECTURE.md  BACKEND_ORGANIZATION.md  Blueprint.md  FEATURES_ORGANIZATION.md  GOOGLE_ERROR_HANDLING_IMPLEMENTATION.md  I18N_GUIDE.md  LIB_PLATFORM_FRAMEWORK.md  PROGRESS.md  STRIPE_SETUP.md  to build list.md
play-store/: SUBMISSION_CHECKLIST.md  data-safety-responses.md  full-description.md  release-notes-template.md  screenshots-guide.md  short-description.txt  title.txt
recyclebin/: README.md
recyclebin/backend/: .env.development  .env.example
recyclebin/components/: FeatureHub.tsx  PWAInstaller.tsx
scripts/: build-monitor.js  build-verification.sh  pre-build-check.js  smart-cache-manager.js
tests/: integration-quality.test.ts  service-quality.test.ts
(+537 files in other folders)
